fix for issue #53 : https://github.com/VRL-Studio/VRL/issues/53